Fix issue in footer text alignment

--- a/styles.css
+++ b/styles.css
@@ -88,4 +88,18 @@ body {
     z-index: 2;
 }
 
+footer {
+    background-color: aquamarine;
+    text-align: center;
+    font-family: ABeeZee;
+    width: 100%;
+    height: 70px;
+    border-radius: 20px;
+    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
